--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -2,12 +2,11 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="com.antalya.coders.pigeon.BlankFragment">
+  tools:context="com.antalya.coders.pigeon.fragments.ChatListFragment">
 
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
+  <ListView
+    android:id="@+id/listViewChat"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment" />
+    android:layout_height="match_parent" />
 
 </FrameLayout>
