FirebaseDatabase, CloudFirestore ile değiştiriliyor..

--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -7,6 +7,7 @@
 
   <android.support.v4.widget.CircleImageView
     android:id="@+id/imageView"
+    android:src="@drawable/ic_default_profile"
     android:layout_weight="1"
     android:layout_width="0dp"
     android:layout_height="match_parent" />
