--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:id="@+id/tabItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tab_text_1" />
+        android:text="@string/chat" />
 
       <android.support.design.widget.TabItem
         android:id="@+id/tabItem2"
